tests/example_policies/withIpBlock2/withIpBlock2-networkpolicy2.yaml
 ### Enables access from all pods in kube-system to all addresses except SL Internal, kube System and kube cluster
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-to-kube-system-from-ipblock-original
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations
          except:
          - 10.0.0.0/8        # SL Internal
          - 172.21.0.0/16     # Kube Service CIDR Range
          - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
          protocol: UDP

---
 ### Enables access from all pods in kube-system to all addresses except SL Internal, kube System and kube cluster with redundancy - additional redundant from with more except
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-to-kube-system-from-ipblock-original-with-redundancy-by-except
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations
          except:
          - 10.0.0.0/8        # SL Internal
          - 172.21.0.0/16     # Kube Service CIDR Range
          - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
          protocol: UDP
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations
          except:
          - 10.0.0.0/8        # SL Internal
          - 172.0.0.0/8       # Kube Service, cluster and more CIDR Range
      ports:
        - port: 53
          protocol: UDP


---
### Enables access from all pods in kube-system to all addresses except SL Internal, kube System and kube cluster
### The ip block range here is written differently than the previous one - by separating Kube cluster to two halves
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-to-kube-system-from-ipblock-except-kube-cluster-written-differently
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations
          except:
          - 10.0.0.0/8        # SL Internal
          - 172.21.0.0/16     # Kube Service CIDR Range
          - 172.30.0.0/17     # Kube Cluster CIDR Range first half
          - 172.30.128.0/17   # Kube Cluster CIDR Range second half
      ports:
        - port: 53
          protocol: UDP

---
### Enables access from all pods in kube-system to all addresses except SL Internal, kube System and kube cluster
### The ip block range here is written differently than the previous one - by separating all addresses to 2
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-to-kube-system-from-ipblock-all-except-seperated-to-2
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - ipBlock:
          cidr: 0.0.0.0/1     # All destinations first half
          except:
          - 10.0.0.0/8        # SL Internal
      ports:
        - port: 53
          protocol: UDP
    - from:
      - ipBlock:
          cidr: 128.0.0.0/1     # All destinations second half
          except:
          - 172.21.0.0/16     # Kube Service CIDR Range
          - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
          protocol: UDP

---
### Enables access from all pods in kube-system to all addresses except SL Internal, kube System and kube cluster first half
### The ip block range here is thus a real superset of the previous ones
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-to-kube-system-from-ipblock-except-half-kube-cluster
  namespace: kube-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0     # All destinations
          except:
          - 10.0.0.0/8          # SL Internal
          - 172.21.0.0/16       # Kube Service CIDR Range
          - 172.30.0.0/17     # Kube Cluster CIDR Range first half
      ports:
        - port: 53
          protocol: UDP
