tests/example_policies/withIpBlock2/withIpBlock2-networkpolicy5.yaml
 
 ### The first two policies below is the baseline
 ### the policies below are not equiv to it in various delicate ways

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-kube-system-tier-frontend-to-ipBlock-high-addresses-on-ports-53-54
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 128.0.0.0/1     # High addresses
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
        - port: 54


---
### Expect slightly different 1
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-kube-system-tier-frontend-to-ipBlock-high-addresses-on-ports-53-54-slightly-different1-expect-bigger
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half of above destinations
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half of above destinations
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/15     # Kube Cluster CIDR Range
      ports:
        - port: 54
    - to:
      - ipBlock:
          cidr: 192.0.0.0/2     # second half of above destinations
      ports:
        - port: 53
    - to:
      - ipBlock:
          cidr: 192.0.0.0/2     # second half of above destinations
      ports:
        - port: 54

---
### Expect slightly different 2
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-kube-system-tier-frontend-to-ipBlock-high-addresses-on-ports-53-54-slightly-different2-excpect-smaller
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half of above destinations
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half of above destinations
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/17     # Kube Cluster CIDR Range
      ports:
        - port: 54
    - to:
      - ipBlock:
          cidr: 192.0.0.0/2     # second half of above destinations
      ports:
        - port: 53
    - to:
      - ipBlock:
          cidr: 192.0.0.0/2     # second half of above destinations
      ports:
        - port: 54

---
### One more port enables in one combination
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-kube-system-tier-frontend-to-ipBlock-high-addresses-on-ports-53-54-slightly-different3-port-added
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half of above destinations
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half of above destinations
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/17     # Kube Cluster CIDR Range
      ports:
        - port: 54
    - to:
      - ipBlock:
          cidr: 192.0.0.0/2     # second half of above destinations
      ports:
        - port: 53
        - port: 70
    - to:
      - ipBlock:
          cidr: 192.0.0.0/2     # second half of above destinations
      ports:
        - port: 54


---
### One port reduced in one combination
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-from-kube-system-tier-frontend-to-ipBlock-high-addresses-on-ports-53-54-slightly-different4-port-reduced
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Egress
  egress: 
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half of above destinations
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/16     # Kube Cluster CIDR Range
      ports:
        - port: 53
    - to:
      - ipBlock:
          cidr: 128.0.0.0/2     # first half of above destinations
          except:
            - 172.21.0.0/16     # Kube Service CIDR Range
            - 172.30.0.0/17     # Kube Cluster CIDR Range
      ports:
        - port: 54
    - to:
      - ipBlock:
          cidr: 192.0.0.0/2     # second half of above destinations
      ports:
        - port: 54
