tests/example_policies/withIpBlock2/withIpBlock2-scheme-with-IPv6.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np2-ipv6
    networkPolicyList:
      - withIpBlock2-networkpolicy2-IPv6.yaml
    expectedWarnings: 0

  - name: np5-ipv6
    networkPolicyList:
      - withIpBlock2-networkpolicy5-IPv6.yaml
    expectedWarnings: 0

  - name: np2
    networkPolicyList:
      - withIpBlock2-networkpolicy2.yaml
    expectedWarnings: 0

queries:
  - name: no_emptiness
    emptiness:
      - np2-ipv6
      - np2
      - np5-ipv6

  - name: no_vacuity
    vacuity:
      - np2-ipv6
      - np2
      - np5-ipv6

# The last two should be equiv
  - name: ipv6-compare_equiv_policies_all_addresses_and_original
    equivalence:
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-all-addresses
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-original
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-all-except-separated-to-2
    expected: 2

# all should be equiv.
  - name: ipv6-compare_equiv_policies_original_and_versions
    equivalence:
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-original
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-except-kube-cluster-written-differently
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-all-except-separated-to-2
    expected: 0

# none should be equiv
  - name: ipv6-equiv_check_slighlty_different_policies
    equivalence:
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different1-expect-bigger
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different2-excpect-smaller
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different3-port-added
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different4-port-reduced
    expected: 10

  - name: ipv6-redundancy_in_specific_policies
    redundancy:
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-original-with-redundancy-by-except # contains redundancy
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-original
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-except-kube-cluster-written-differently
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-all-except-separated-to-2
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-except-half-kube-cluster
    expected: 1

# none should be redundant
  - name: ipv6-redundancy_check_slighlty_different_policies
    redundancy:
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different1-expect-bigger
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different2-excpect-smaller
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different3-port-added
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different4-port-reduced
    expected: 0

# The first policy contains the second one
  - name: ipv6-containment_specific_np2
    containment:
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-except-half-kube-cluster
      - np2-ipv6/kube-system/ipv6-enable-to-kube-system-from-ipblock-all-except-separated-to-2
    expected: 1

# The first policy contains the second one
  - name: ipv6-containment_specific_np5_1
    containment:
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different1-expect-bigger
    expected: 1


# The first policy contains the second one
  - name: ipv6-containment_specific_np5_2
    containment:
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different2-excpect-smaller
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54
    expected: 1

# The first policy contains the second one
  - name: ipv6-containment_specific_np5_3
    containment:
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different3-port-added
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54
      - np5-ipv6/kube-system/ipv6-enable-from-kube-system-tier-frontend-to-ipblock-high-addresses-on-ports-53-54-slightly-different1-expect-bigger
    expected: 2
